# cmake-hid-handle

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.cmd  build.sh
hidapi/autom4te.cache/: traces.0t
src/: hidhandle.cc  hidhandle.h  main.cc
src/hmi/: CMakeLists.txt  hmi_core.cc  hmi_core.h  hmi_hid.cc  hmi_hid.h  hmi_packet.cc
